@@ -1,5 +1,8 @@
 2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scripts/format-page.py (grab_gettext): Strip .html from [most]
+	local urls.
+
 	* nl/switch/index.html: 
 	* nl/index.html: Update.
 
